[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SigmarOne.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Buttons/Blue/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/Buttons/Blue/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/Buttons/Blue/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Font data/SigmarOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/SingleDay.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Default/DefaultInput.tscn" type="PackedScene" id=8]
[ext_resource path="res://Font data/Sintony-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.133333, 0.4, 0.666667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0.305, 0.61, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=14]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.133333, 0.4, 0.666667, 0.470588 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.266667, 0.266667, 0.266667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 1
outline_color = Color( 0.266667, 0.266667, 0.266667, 1 )
extra_spacing_top = -24
extra_spacing_bottom = -24
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LoginPopup" type="MarginContainer" parent="."]
visible = false
margin_left = 96.0
margin_top = 48.0
margin_right = 624.0
margin_bottom = 336.0
custom_constants/margin_right = 96
custom_constants/margin_top = 48
custom_constants/margin_left = 96
custom_constants/margin_bottom = 48

[node name="Popup" type="PopupPanel" parent="LoginPopup"]
visible = true
margin_left = 96.0
margin_top = 48.0
margin_right = 494.0
margin_bottom = 311.0
custom_styles/panel = SubResource( 8 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPopup/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0

[node name="HBoxContainer" type="HBoxContainer" parent="LoginPopup/Popup/VBoxContainer"]
margin_right = 396.0
margin_bottom = 33.0

[node name="TitleMargin" type="MarginContainer" parent="LoginPopup/Popup/VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 307.0
margin_bottom = 33.0
size_flags_horizontal = 6
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="LoginPopup/Popup/VBoxContainer/HBoxContainer/TitleMargin"]
margin_top = 3.0
margin_right = 255.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Entre e comece a divers√£o!"
valign = 1

[node name="ExitButton" type="Button" parent="LoginPopup/Popup/VBoxContainer/HBoxContainer"]
margin_left = 364.0
margin_right = 396.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
custom_colors/font_color_focus = Color( 1, 0.2, 0.2, 1 )
custom_colors/font_color = Color( 1, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 1, 0.4, 0.4, 1 )
custom_colors/font_color_pressed = Color( 1, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 2 )
text = "X"
flat = true
icon_align = 1

[node name="MainMargin" type="MarginContainer" parent="LoginPopup/Popup/VBoxContainer"]
margin_top = 37.0
margin_right = 396.0
margin_bottom = 261.0
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 0
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="LoginPopup/Popup/VBoxContainer/MainMargin"]
margin_left = 32.0
margin_right = 364.0
margin_bottom = 192.0

[node name="EmailField" type="VBoxContainer" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_right = 332.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/EmailField"]
margin_right = 332.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 13 )
text = "Email:"

[node name="LineEdit" type="LineEdit" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/EmailField"]
margin_top = 21.0
margin_right = 332.0
margin_bottom = 49.0
grow_horizontal = 0
rect_min_size = Vector2( 332, 0 )
size_flags_horizontal = 11
custom_colors/selection_color = Color( 0.69, 0.69, 0.69, 0.498039 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
max_length = 64
placeholder_text = "Seu email"
placeholder_alpha = 0.8

[node name="PasswordField" type="VBoxContainer" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_top = 53.0
margin_right = 332.0
margin_bottom = 106.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField"]
margin_right = 332.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 14 )
text = "Senha:"

[node name="LineEdit" type="LineEdit" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField"]
margin_top = 21.0
margin_right = 332.0
margin_bottom = 53.0
grow_horizontal = 0
rect_min_size = Vector2( 332, 32 )
size_flags_horizontal = 11
custom_colors/selection_color = Color( 0.69, 0.69, 0.69, 0.498039 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
max_length = 48
secret = true
expand_to_text_length = true
placeholder_text = "Sua senha"
placeholder_alpha = 0.8

[node name="Buttons" type="HBoxContainer" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_top = 163.0
margin_right = 332.0
margin_bottom = 192.0
size_flags_vertical = 10
custom_constants/separation = 6

[node name="LoginButton" type="Button" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons"]
margin_right = 163.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Entrar"

[node name="RegisterButton" type="Button" parent="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons"]
margin_left = 169.0
margin_right = 332.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Ou registrar..."

[node name="RegisterPopup" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 96
custom_constants/margin_top = 48
custom_constants/margin_left = 96
custom_constants/margin_bottom = 48

[node name="Popup" type="PopupPanel" parent="RegisterPopup"]
margin_left = 96.0
margin_top = 48.0
margin_right = 624.0
margin_bottom = 336.0
custom_styles/panel = SubResource( 8 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="RegisterPopup/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0

[node name="HBoxContainer" type="HBoxContainer" parent="RegisterPopup/Popup/VBoxContainer"]
margin_right = 526.0
margin_bottom = 33.0

[node name="TitleMargin" type="MarginContainer" parent="RegisterPopup/Popup/VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 378.0
margin_bottom = 33.0
size_flags_horizontal = 6
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="RegisterPopup/Popup/VBoxContainer/HBoxContainer/TitleMargin"]
margin_top = 3.0
margin_right = 267.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Crie sua conta e divirta-se!"
valign = 1

[node name="ExitButton" type="Button" parent="RegisterPopup/Popup/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 526.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
custom_colors/font_color_focus = Color( 1, 0.2, 0.2, 1 )
custom_colors/font_color = Color( 1, 0.2, 0.2, 1 )
custom_colors/font_color_hover = Color( 1, 0.4, 0.4, 1 )
custom_colors/font_color_pressed = Color( 1, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 2 )
text = "X"
flat = true
icon_align = 1

[node name="MainMargin" type="MarginContainer" parent="RegisterPopup/Popup/VBoxContainer"]
margin_top = 37.0
margin_right = 526.0
margin_bottom = 286.0
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 0
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer2" type="VBoxContainer" parent="RegisterPopup/Popup/VBoxContainer/MainMargin"]
margin_left = 32.0
margin_right = 494.0
margin_bottom = 217.0

[node name="EmailField" type="VBoxContainer" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_right = 462.0
margin_bottom = 49.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/EmailField"]
margin_right = 462.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 13 )
text = "Email:"

[node name="LineEdit" type="LineEdit" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/EmailField"]
margin_top = 21.0
margin_right = 462.0
margin_bottom = 49.0
grow_horizontal = 0
rect_min_size = Vector2( 332, 0 )
size_flags_horizontal = 11
custom_colors/selection_color = Color( 0.69, 0.69, 0.69, 0.498039 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
max_length = 64
placeholder_text = "Seu email"
placeholder_alpha = 0.8

[node name="PasswordField" type="VBoxContainer" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_top = 53.0
margin_right = 462.0
margin_bottom = 106.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField"]
margin_right = 462.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 14 )
text = "Senha:"

[node name="LineEdit" type="LineEdit" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField"]
margin_top = 21.0
margin_right = 462.0
margin_bottom = 53.0
grow_horizontal = 0
rect_min_size = Vector2( 332, 32 )
size_flags_horizontal = 11
custom_colors/selection_color = Color( 0.69, 0.69, 0.69, 0.498039 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
max_length = 48
secret = true
expand_to_text_length = true
placeholder_text = "Sua senha"
placeholder_alpha = 0.8

[node name="PasswordField2" type="VBoxContainer" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_top = 110.0
margin_right = 462.0
margin_bottom = 159.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField2"]
margin_right = 462.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 14 )
text = "Confirme:"

[node name="LineEdit" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/PasswordField2" instance=ExtResource( 8 )]

[node name="Buttons" type="HBoxContainer" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2"]
margin_top = 188.0
margin_right = 462.0
margin_bottom = 217.0
size_flags_vertical = 10
custom_constants/separation = 6

[node name="RegisterButton" type="Button" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons"]
margin_right = 228.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Registrar"

[node name="LoginButton" type="Button" parent="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons"]
margin_left = 234.0
margin_right = 462.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Ou entrar..."

[node name="OuterMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="Background" type="Panel" parent="OuterMargin"]
margin_left = 64.0
margin_top = 64.0
margin_right = 656.0
margin_bottom = 320.0
custom_styles/panel = SubResource( 7 )

[node name="MainMargin" type="MarginContainer" parent="OuterMargin"]
margin_left = 64.0
margin_top = 64.0
margin_right = 656.0
margin_bottom = 320.0
custom_constants/margin_right = 64
custom_constants/margin_top = 16
custom_constants/margin_left = 64
custom_constants/margin_bottom = 16

[node name="Wrapper" type="VBoxContainer" parent="OuterMargin/MainMargin"]
margin_left = 64.0
margin_top = 16.0
margin_right = 528.0
margin_bottom = 240.0
custom_constants/separation = 16

[node name="Control" type="VBoxContainer" parent="OuterMargin/MainMargin/Wrapper"]
margin_left = 33.0
margin_right = 431.0
margin_bottom = 79.0
size_flags_horizontal = 4

[node name="Title" type="Label" parent="OuterMargin/MainMargin/Wrapper/Control"]
margin_right = 398.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0.466667, 0.666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "KOINONIA"

[node name="Description" type="Label" parent="OuterMargin/MainMargin/Wrapper/Control"]
margin_top = 62.0
margin_right = 398.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.266667, 0.266667, 0.266667, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Um lugar para chamar os amigos e passar um tempo de Koinonia!"
align = 1

[node name="LineEdit" parent="OuterMargin/MainMargin/Wrapper" instance=ExtResource( 8 )]
margin_top = 95.0
margin_right = 464.0
margin_bottom = 123.0
align = 1
secret = false
expand_to_text_length = false
placeholder_text = "Escolha um nome..."

[node name="Signing" type="HBoxContainer" parent="OuterMargin/MainMargin/Wrapper"]
margin_left = 52.0
margin_top = 195.0
margin_right = 412.0
margin_bottom = 224.0
size_flags_horizontal = 4
size_flags_vertical = 10
custom_constants/separation = 16

[node name="REGISTER" type="Button" parent="OuterMargin/MainMargin/Wrapper/Signing"]
margin_right = 216.0
margin_bottom = 29.0
rect_min_size = Vector2( 216, 0 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Criar uma conta!"

[node name="LOGIN" type="Button" parent="OuterMargin/MainMargin/Wrapper/Signing"]
margin_left = 232.0
margin_right = 360.0
margin_bottom = 29.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "ENTRAR"

[connection signal="pressed" from="LoginPopup/Popup/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_login_closed"]
[connection signal="pressed" from="LoginPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="RegisterPopup/Popup/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_register_closed"]
[connection signal="pressed" from="RegisterPopup/Popup/VBoxContainer/MainMargin/VBoxContainer2/Buttons/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="OuterMargin/MainMargin/Wrapper/Signing/REGISTER" to="." method="_on_REGISTER_pressed"]
[connection signal="pressed" from="OuterMargin/MainMargin/Wrapper/Signing/LOGIN" to="." method="_on_LOGIN_pressed"]
